Remove scrollbar from conatiner fix -  part 2.

--- a/custom-hmh-global.css
+++ b/custom-hmh-global.css
@@ -25,8 +25,12 @@
   --white: #FFF;
 }
 
+.css-ainlma-hintsContainer {
+  margin-bottom: 20px !important;
+}
+
 .lrn_imageclozeassociation {
-  width: auto;
+  width: auto !important;
 }
 
 .lrn,
